Chapter 13 — Listing 13.11: LocalisedMutation.java Demonstrates: Localised mutation using Map.merge versus shared